--- a/resources/contact.html
+++ b/resources/contact.html
@@ -116,34 +116,22 @@
                           <textarea class="form-control" name="MMERGE2" id="mce-MMERGE2" rows="3" placeholder="Describe your business"></textarea>
                         </div>
                         
-                        <submit class="blob-btn d-none d-md-flex align-items-center" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">
-                          SUBMIT<i class="fas fa-chevron-right ml-2"></i>
-                          <span class="blob-btn__inner">
-                            <span class="blob-btn__blobs">
-                              <span class="blob-btn__blob"></span>
-                              <span class="blob-btn__blob"></span>
-                              <span class="blob-btn__blob"></span>
-                              <span class="blob-btn__blob"></span>
-                            </span>
-                          </span>
-                        </submit>
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_f2156c97a173f4abbb2d61617_f67e65bc22" tabindex="-1" value=""></div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                <p class="brandingLogo"><a href="http://eepurl.com/ioujMc" title="Mailchimp - email marketing made easy and fun"></a></p>
+                            </div>
+                        </div>
+                    </div>
                       </form>
                     </div>
                   </div>
 
 
-	<!-- </div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_f2156c97a173f4abbb2d61617_f67e65bc22" tabindex="-1" value=""></div>
-        <div class="optionalParent">
-            <div class="clear foot">
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                <p class="brandingLogo"><a href="http://eepurl.com/ioujMc" title="Mailchimp - email marketing made easy and fun"></a></p>
-            </div>
-        </div>
-    </div>
-</form>
-</div> -->
-<!--End mc_embed_signup-->
+	<!-- </div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
+
+<!--End mc_embed_signup -->
 
             </div>
         </div>
@@ -197,4 +185,3 @@
   </defs>
 </svg>
 
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[6]='MMERGE6';ftypes[6]='dropdown';fnames[2]='MMERGE2';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
