--- a/resources/contact.html
+++ b/resources/contact.html
@@ -127,17 +127,79 @@
                       </form>
                     </div>
                   </div>
+<!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px;}
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+    <form action="https://tech-gecko.us13.list-manage.com/subscribe/post?u=f2156c97a173f4abbb2d61617&amp;id=f67e65bc22&amp;f_id=00c1dae5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+        <h2>Subscribe</h2>
+        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">First Name </label>
+	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+	<span id="mce-FNAME-HELPERTEXT" class="helper_text"></span>
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE3">Business Name </label>
+	<input type="text" value="" name="MMERGE3" class="" id="mce-MMERGE3">
+	<span id="mce-MMERGE3-HELPERTEXT" class="helper_text"></span>
+</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+</div>
+<div class="mc-field-group size1of2">
+	<label for="mce-PHONE">Phone Number </label>
+	<input type="text" name="PHONE" class="" value="" id="mce-PHONE">
+	<span id="mce-PHONE-HELPERTEXT" class="helper_text"></span>
+	
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE6">Please Select A Package </label>
+	<select name="MMERGE6" class="" id="mce-MMERGE6">
+	<option value=""></option>
+	<option value="Standard">Standard</option>
+<option value="Premium">Premium</option>
+<option value="Bespoke">Bespoke</option>
+<option value="Unsure">Unsure</option>
 
-
-	<!-- </div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
-
-<!--End mc_embed_signup -->
-
+	</select>
+	<span id="mce-MMERGE6-HELPERTEXT" class="helper_text"></span>
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE2">Describe Your Business </label>
+	<input type="text" value="" name="MMERGE2" class="" id="mce-MMERGE2">
+	<span id="mce-MMERGE2-HELPERTEXT" class="helper_text"></span>
+</div>
+	<div id="mce-responses" class="clear foot">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_f2156c97a173f4abbb2d61617_f67e65bc22" tabindex="-1" value=""></div>
+        <div class="optionalParent">
+            <div class="clear foot">
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                <p class="brandingLogo"><a href="http://eepurl.com/ioujMc" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+            </div>
+        </div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[6]='MMERGE6';ftypes[6]='dropdown';fnames[2]='MMERGE2';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
             </div>
         </div>
     </div>
 </main>
 <svg id="wave" class="w-100 d-none d-md-block" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 210" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(232, 240, 241, 1)" offset="0%"></stop><stop stop-color="rgba(232, 240, 241, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,126L80,108.5C160,91,320,56,480,66.5C640,77,800,133,960,129.5C1120,126,1280,63,1440,63C1600,63,1760,126,1920,133C2080,140,2240,91,2400,59.5C2560,28,2720,14,2880,31.5C3040,49,3200,98,3360,105C3520,112,3680,77,3840,84C4000,91,4160,140,4320,150.5C4480,161,4640,133,4800,108.5C4960,84,5120,63,5280,66.5C5440,70,5600,98,5760,91C5920,84,6080,42,6240,35C6400,28,6560,56,6720,56C6880,56,7040,28,7200,14C7360,0,7520,0,7680,7C7840,14,8000,28,8160,28C8320,28,8480,14,8640,7C8800,0,8960,0,9120,0C9280,0,9440,0,9600,17.5C9760,35,9920,70,10080,91C10240,112,10400,119,10560,133C10720,147,10880,168,11040,154C11200,140,11360,91,11440,66.5L11520,42L11520,210L11440,210C11360,210,11200,210,11040,210C10880,210,10720,210,10560,210C10400,210,10240,210,10080,210C9920,210,9760,210,9600,210C9440,210,9280,210,9120,210C8960,210,8800,210,8640,210C8480,210,8320,210,8160,210C8000,210,7840,210,7680,210C7520,210,7360,210,7200,210C7040,210,6880,210,6720,210C6560,210,6400,210,6240,210C6080,210,5920,210,5760,210C5600,210,5440,210,5280,210C5120,210,4960,210,4800,210C4640,210,4480,210,4320,210C4160,210,4000,210,3840,210C3680,210,3520,210,3360,210C3200,210,3040,210,2880,210C2720,210,2560,210,2400,210C2240,210,2080,210,1920,210C1760,210,1600,210,1440,210C1280,210,1120,210,960,210C800,210,640,210,480,210C320,210,160,210,80,210L0,210Z"></path></svg> 
+
 
 
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[4]='PHONE';ftypes[4]='phone';fnames[6]='MMERGE6';ftypes[6]='dropdown';fnames[2]='MMERGE2';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
