--- a/resources/contact.html
+++ b/resources/contact.html
@@ -86,7 +86,7 @@
             <div class="col-12 col-md-7 d-flex justify-content-center">
                 <div id="contactbox" class="d-flex justify-content-center align-items-center w-100">
                     <div>
-                      <form class="w-100">
+                      <form class="w-100" action="https://tech-gecko.us13.list-manage.com/subscribe/post?u=f2156c97a173f4abbb2d61617&amp;id=f67e65bc22&amp;f_id=00c1dae5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div class="mc-field-group mb-2">
                           <input type="contactname"  class="form-control" name="FNAME" id="mce-FNAME" aria-describedby="emailHelp" placeholder="Name">                          
                         </div>
@@ -140,24 +140,19 @@
         <h2>Subscribe</h2>
         <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
-	<label for="mce-FNAME">First Name </label>
-	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+	<input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="Name">
 	<span id="mce-FNAME-HELPERTEXT" class="helper_text"></span>
 </div>
 <div class="mc-field-group">
-	<label for="mce-MMERGE3">Business Name </label>
-	<input type="text" value="" name="MMERGE3" class="" id="mce-MMERGE3">
+	<input type="text" value="" name="MMERGE3" class="" id="mce-MMERGE3" placeholder="Business Name">
 	<span id="mce-MMERGE3-HELPERTEXT" class="helper_text"></span>
 </div>
 <div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email" required>
 	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
 </div>
 <div class="mc-field-group size1of2">
-	<label for="mce-PHONE">Phone Number </label>
-	<input type="text" name="PHONE" class="" value="" id="mce-PHONE">
+	<input type="text" name="PHONE" class="" value="" id="mce-PHONE" placeholder="Phone Number">
 	<span id="mce-PHONE-HELPERTEXT" class="helper_text"></span>
 	
 </div>
