--- a/resources/packages.html
+++ b/resources/packages.html
@@ -123,7 +123,7 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> 2 Amends Monthly</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks Great On All Devices</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Favicon Design</p>
-        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> MailChimp Contact Form</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Integrated Contact Form</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> One Month Average Completion</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> £30 Upkeep</p>
       </div>
@@ -162,7 +162,7 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> 5 Amends Monthly</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks Great On All Devices</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Favicon Design</p>
-        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> MailChimp Contact Form</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Integrated Contact Form</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Two Months Average Completion</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Logo Design</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Social Media Integration</p>
@@ -204,7 +204,7 @@
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Unlimited Amends</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Looks Great On All Devices</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Favicon Design</p>
-        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> MailChimp Contact Form</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Integrated Contact Form</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Three Months Average Completion</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Free Logo Design</p>
         <p class="col-6 pl-0 py-1 d-flex align-items-center"><i class="fas fa-chevron-right mr-2"></i> Social Media Integration</p>
